fix: 优化资源关闭和集合访问操作
- 使用 try-with-resources 确保 InputStream 自动关闭
- 替换集合访问方法为 getFirst/getLast，提升代码可读性